--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,5 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <name>PriorityQueueing_airport</name>
+    <name>PriorityQueueingAirport</name>
 </project>
